<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".DetailsActivity">

    <TextView
        android:id="@+id/changeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/changeName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/newName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:textSize="20sp"
        android:hint="@string/enterNameHint"
        app:layout_constraintTop_toBottomOf="@id/changeName"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/changeQuant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/changeQuantity"
        app:layout_constraintTop_toBottomOf="@id/newName"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/newQuantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:textSize="20sp"
        android:hint="@string/quantityHint"
        app:layout_constraintBaseline_toBaselineOf="@id/changeQuant"
        app:layout_constraintStart_toEndOf="@id/changeQuant"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/submitChangeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/buttonSubmitChange"
        android:onClick="onSubmitChangeClicked"
        app:layout_constraintTop_toBottomOf="@id/newQuantity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>