<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".ItemAdditionActivity">

    <TextView
        android:id="@+id/enterItemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/enterItemName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/enterName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:textSize="20sp"
        android:hint="@string/enterNameHint"
        app:layout_constraintTop_toBottomOf="@id/enterItemName"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/enterItemQuant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/enterItemQuantity"
        app:layout_constraintTop_toBottomOf="@id/enterName"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/enterQuant"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:textSize="20sp"
        android:hint="@string/quantityHint"
        app:layout_constraintBaseline_toBaselineOf="@id/enterItemQuant"
        app:layout_constraintStart_toEndOf="@id/enterItemQuant"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/createItemButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/buttonCreateItem"
        android:enabled="false"
        android:onClick="onCreateItemClicked"
        app:layout_constraintTop_toBottomOf="@id/enterQuant"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>